# TS_Todo-List

./: README.md  docker-compose.yml  dockerfile  pyproject.toml  tech_spec.md
to_do_list/: load_fixtures.sh
to_do_list/to_do_list/: settings.py  urls.py
to_do_list/todo/: admin.py  models.py  serializers.py  views.py
to_do_list/todo/fixtures/todo/: tags_fixture.json  tasks_fixture.json
to_do_list/todo/migrations/: 0001_initial.py  0002_alter_task_tags.py
